# PizzaPricer-AI

./: README.md  app.py  pyproject.toml  teste.ipynb
